--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -21,3 +21,9 @@
 .nav-links-text{
     color: lightseagreen;
 }
+.site-title{
+    font-size: 3rem;
+    color: gray;
+    font-weight: 700;
+    margin: 3rem 0;
+}
