Finished Gatsby Tutorial Part 6

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -13,6 +13,7 @@
     padding-left: 0%;
 }
 .heading{
+    background-image: "https://img1.baidu.com/it/u=1526096303,4228783601&fm=253&fmt=auto&app=138&f=JPEG?w=749&h=500";
     color: rebeccapurple;
 }
 .nav-links-item{
